# Hackathon-2

./: .gitignore  README.md  manual_test.py  pyproject.toml  test_todo_app.py
.claude/agents/: todo-spec-reviewer.md
.specify/memory/: constitution.md
history/prompts/001-console-todo-app/: 001-implement-phase-i-console-todo-app.green.prompt.md  001-phase-i-console-todo-app-specification.spec.prompt.md  002-phase-i-console-todo-app-implementation-plan.plan.prompt.md  003-phase-i-console-todo-app-task-generation.tasks.prompt.md  004-commit-and-create-pr.misc.prompt.md
history/prompts/constitution/: 001-initial-constitution-ratification.constitution.prompt.md
specs/001-console-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-console-todo-app/checklists/: requirements.md
specs/001-console-todo-app/contracts/: cli-interface.md
src/: __init__.py  main.py
src/cli/: __init__.py  interface.py
src/models/: __init__.py  todo.py
src/services/: __init__.py  todo_service.py
